Update EngineerChatPane.java